Media queries for footer done

--- a/about.html
+++ b/about.html
@@ -95,25 +95,27 @@
     <footer>
       <h2>Contact</h2>
 
-      <aside class="contact-icon">
-        <span><i class="fa-regular fa-envelope"></i>Email</span>
-        <p>info@affirmations.com</p>
-      </aside>
+      <div class="footer-info">
+        <aside class="contact-icon">
+          <span><i class="fa-regular fa-envelope"></i>Email</span>
+          <p>info@affirmations.com</p>
+        </aside>
 
-      <section class="social">
-        <ul class="name-icon">
-          <li><i class="fa-brands fa-instagram"></i></li>
-          <li><a href="instagram.com">Instagram</a></li>
-        </ul>
-        <ul class="name-icon">
-          <li><i class="fa-brands fa-facebook-f"></i></li>
-          <li><a href="facebook.com">Facebook</a></li>
-        </ul>
-        <ul class="name-icon">
-          <li><i class="fa-brands fa-twitter"></i></li>
-          <li><a href="">Twitter</a></li>
-        </ul>
-      </section>
+        <section class="social">
+          <ul class="name-icon">
+            <li><i class="fa-brands fa-instagram"></i></li>
+            <li><a href="instagram.com">Instagram</a></li>
+          </ul>
+          <ul class="name-icon">
+            <li><i class="fa-brands fa-facebook-f"></i></li>
+            <li><a href="facebook.com">Facebook</a></li>
+          </ul>
+          <ul class="name-icon">
+            <li><i class="fa-brands fa-twitter"></i></li>
+            <li><a href="">Twitter</a></li>
+          </ul>
+        </section>
+      </div>
       <p id="copyright">&copy; STAffirmations, Inc.</p>
     </footer>
   </body>
