--- a/help.html
+++ b/help.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="help.css" />
-       <script
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="help.css" />
+    <script
       src="https://kit.fontawesome.com/d81457d759.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Caveat&family=Kalam&family=Kaushan+Script&family=Lobster+Two&family=Oleo+Script&family=Permanent+Marker&family=Quicksand:wght@300&display=swap" rel="stylesheet">
-      <title>Help page</title>
-    </head>
-    <body>
-     <header>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&family=Kalam&family=Kaushan+Script&family=Lobster+Two&family=Oleo+Script&family=Permanent+Marker&family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <title>Help page</title>
+  </head>
+  <body>
+    <header>
       <nav class="navbar">
         <aside class="titlelogo">
           <span><img src="Soulful.png" alt="" /></span>
@@ -31,7 +36,7 @@
             <li>
               <a href="help.html">HELP PAGE</a>
             </li>
-             <li>
+            <li>
               <a href="about.html">ABOUT US</a>
             </li>
           </ul>
@@ -40,24 +45,43 @@
     </header>
 
     <main>
+      <p>
+        Need help with a coding project or have a question about a specific
+        language or concept? Check out these forums and communities:
+      </p>
 
-      <p>Need help with a coding project or have a question about a specific language or concept? Check out these forums
-        and communities:</p>
-
-      <h2><button class="forums">
+      <h2>
+        <button class="forums">
           <h2>CLICK HERE</h2>
-        </button> to access some helpful Coding Forums and Programming Resources</h2>
+        </button>
+        to access some helpful Coding Forums and Programming Resources
+      </h2>
       <div id="helpsites">
         <ul>
           <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
-          <li><a href="https://www.w3schools.com/php/php_ref_mysqli.asp">W3Schools PHP Forum</a></li>
-          <li><a href="https://www.reddit.com/r/learnprogramming/">/r/learnprogramming on Reddit</a></li>
-          <li><a href="https://www.codecademy.com/forum">Codecademy Forum</a></li>
-          <li><a href="https://www.udacity.com/community">Udacity Community</a></li>
+          <li>
+            <a href="https://www.w3schools.com/php/php_ref_mysqli.asp"
+              >W3Schools PHP Forum</a
+            >
+          </li>
+          <li>
+            <a href="https://www.reddit.com/r/learnprogramming/"
+              >/r/learnprogramming on Reddit</a
+            >
+          </li>
+          <li>
+            <a href="https://www.codecademy.com/forum">Codecademy Forum</a>
+          </li>
+          <li>
+            <a href="https://www.udacity.com/community">Udacity Community</a>
+          </li>
         </ul>
       </div>
 
-      <p>Remember to always be respectful and follow the forum rules and guidelines when posting or asking for help.</p>
+      <p>
+        Remember to always be respectful and follow the forum rules and
+        guidelines when posting or asking for help.
+      </p>
 
       <section class="tips">
         <h1>Focus and Stress Relief Tips for Students</h1>
@@ -67,72 +91,105 @@
         </button>
         <div id="tipsnideas">
           <ul>
-            <li><strong>HAVE A DEDICATED WORK SPACE</strong> - Creating a designated workspace free from distractions will
-              help you maintain a higher level of concentration when you study. Avoid things and places that bring
-              distraction to your study time, eg; Tv, noisy crowd and Starbucks if neccesary</li>
-            <li><strong>CREATE SMALLER TASKS</strong>- Break large tasks into smaller, manageable ones, that way; your
-              workload will be less daunting and easier to handle.</li>
-            <li><strong>BE GOAL ORIENTED</strong> - Setting specific goals and deadlines for each task will help you stay
-              on track to finishing your work faster. This trick allows you to set your eyes on an achievable goal and
-              once that goal is achieved, you feel accomplished and will likely to forward to achieving more.</li>
-            <li><strong>BAN SOCIAL MEDIA</strong> - during study times - Eliminating or limiting the use of social media,
-              as well as turning off your phone notifications during study times, can increase your productivity by a
-              whooping 85%.<href>https://www.socialworktoday.com/news/enews_0518_2.</href> If you must use social media,
-              set an alarm or a time limit and don't be tempted to exceed it.</li>
-            <li><strong>TAKE A BREAK</strong> - Taking regular breaks will help you rest your mind and prevent burnout.
+            <li>
+              <strong>HAVE A DEDICATED WORK SPACE</strong> - Creating a
+              designated workspace free from distractions will help you maintain
+              a higher level of concentration when you study. Avoid things and
+              places that bring distraction to your study time, eg; Tv, noisy
+              crowd and Starbucks if neccesary
+            </li>
+            <li>
+              <strong>CREATE SMALLER TASKS</strong>- Break large tasks into
+              smaller, manageable ones, that way; your workload will be less
+              daunting and easier to handle.
+            </li>
+            <li>
+              <strong>BE GOAL ORIENTED</strong> - Setting specific goals and
+              deadlines for each task will help you stay on track to finishing
+              your work faster. This trick allows you to set your eyes on an
+              achievable goal and once that goal is achieved, you feel
+              accomplished and will likely to forward to achieving more.
+            </li>
+            <li>
+              <strong>BAN SOCIAL MEDIA</strong> - during study times -
+              Eliminating or limiting the use of social media, as well as
+              turning off your phone notifications during study times, can
+              increase your productivity by a whooping 85%.<href
+                >https://www.socialworktoday.com/news/enews_0518_2.</href
+              >
+              If you must use social media, set an alarm or a time limit and
+              don't be tempted to exceed it.
+            </li>
+            <li>
+              <strong>TAKE A BREAK</strong> - Taking regular breaks will help
+              you rest your mind and prevent burnout.
             </li>
           </ul>
         </div>
-        
+
         <button>
           <div class="Stress-relief-tips">
             <h2>Stress Relief Tips</h2>
           </div>
         </button>
         <ul>
-          <li><strong>EXERCISE</strong> - regular exercises can help you release endorphins and in turn, reduce stress
-            which can be a big impact on your studies.</li>
-          <li><strong>MEDITATION</strong>- Practice deep breathing, meditation or other form of relaxation techniques.
-            These can help you to re-focus and re-align your mind towards your studies.</li>
-          <li><strong>NUTRITION</strong> - When the going gets tough, maintaining a good diet can become quite hard and
-            eating a healthy and balanced diet can be moved to the bottom of the priority list. But eating right and well
-            could be the key to improving your studies too.</li>
-          <li><strong>SLEEP</strong> - Sleeping is often underrated and hardly taled about as one of the main reasons
-            students get stressed. Get enough sleep every night, to recharge your body and mind. It will do wonders for
-            your physical and mental health!</li>
-          <li><strong>TALK</strong> - Connect with others and talk about your feelings or any concerns you may have. You
-            tutors and fellow trainees/students are there for you. Some might even be going through the same things...you
-            just never know!</li>
+          <li>
+            <strong>EXERCISE</strong> - regular exercises can help you release
+            endorphins and in turn, reduce stress which can be a big impact on
+            your studies.
+          </li>
+          <li>
+            <strong>MEDITATION</strong>- Practice deep breathing, meditation or
+            other form of relaxation techniques. These can help you to re-focus
+            and re-align your mind towards your studies.
+          </li>
+          <li>
+            <strong>NUTRITION</strong> - When the going gets tough, maintaining
+            a good diet can become quite hard and eating a healthy and balanced
+            diet can be moved to the bottom of the priority list. But eating
+            right and well could be the key to improving your studies too.
+          </li>
+          <li>
+            <strong>SLEEP</strong> - Sleeping is often underrated and hardly
+            taled about as one of the main reasons students get stressed. Get
+            enough sleep every night, to recharge your body and mind. It will do
+            wonders for your physical and mental health!
+          </li>
+          <li>
+            <strong>TALK</strong> - Connect with others and talk about your
+            feelings or any concerns you may have. You tutors and fellow
+            trainees/students are there for you. Some might even be going
+            through the same things...you just never know!
+          </li>
         </ul>
       </section>
     </main>
 
-    <footer class="end">
+    <footer>
       <h2>Contact</h2>
 
-      <aside class="contact-icon">
-        <span><i class="fa-regular fa-envelope"></i>Email</span>
-        <p>info@affirmations.com</p>
-      </aside>
+      <div class="footer-info">
+        <aside class="contact-icon">
+          <span><i class="fa-regular fa-envelope"></i>Email</span>
+          <p>info@affirmations.com</p>
+        </aside>
 
-      <section class="social">
-        <ul class="name-icon">
-          <li><i class="fa-brands fa-instagram"></i></li>
-          <li><a href="instagram.com">Instagram</a></li>
-        </ul>
-        <ul class="name-icon">
-          <li><i class="fa-brands fa-facebook-f"></i></li>
-          <li><a href="facebook.com">Facebook</a></li>
-        </ul>
-        <ul class="name-icon">
-          <li><i class="fa-brands fa-twitter"></i></li>
-          <li><a href="">Twitter</a></li>
-        </ul>
-      </section>
-      </p>
-      <p id="copyright">&copy;STAffirmations: Class9!</p>
-      
+        <section class="social">
+          <ul class="name-icon">
+            <li><i class="fa-brands fa-instagram"></i></li>
+            <li><a href="instagram.com">Instagram</a></li>
+          </ul>
+          <ul class="name-icon">
+            <li><i class="fa-brands fa-facebook-f"></i></li>
+            <li><a href="facebook.com">Facebook</a></li>
+          </ul>
+          <ul class="name-icon">
+            <li><i class="fa-brands fa-twitter"></i></li>
+            <li><a href="">Twitter</a></li>
+          </ul>
+        </section>
+      </div>
+      <p id="copyright">&copy; STAffirmations, Inc.</p>
     </footer>
   </body>
-  
-  </html>
+</html>
