Button size and possible info
Button sizes altered to make wording look less cramped. Pending review and subject to change.

Possible information added to about page but commented out for now until information is ready to be integrated

--- a/about.html
+++ b/about.html
@@ -46,50 +46,65 @@
     </header>
 
     <main>
-      <h1 class="about-title">
-        <picture>
-          <source
-            srcset="
-              https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.webp
-            "
-            type="image/webp"
-          />
-          <img
-            src="https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.gif"
-            alt="❤"
-            width="32"
-            height="32"
-          /> </picture
-        >About Us
-        <picture>
-          <source
-            srcset="
-              https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.webp
-            "
-            type="image/webp"
-          />
-          <img
-            src="https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.gif"
-            alt="❤"
-            width="32"
-            height="32"
-          />
-        </picture>
-      </h1>
-      <p>
-        This page was created by Gayle, Andriana and Abdulmajid as a group
-        project as part of our course at Code Your Future (CYF)
-      </p>
+      <section class="info-section">
+        <h1 class="about-title">
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.gif"
+              alt="❤"
+              class="emoji"
+              width="32"
+              height="32"
+            /> </picture
+          >About Us
+          <picture>
+            <source
+              srcset="
+                https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.webp
+              "
+              type="image/webp"
+            />
+            <img
+              src="https://fonts.gstatic.com/s/e/notoemoji/latest/2764_fe0f/512.gif"
+              alt="❤"
+              class="emoji"
+              width="32"
+              height="32"
+            />
+          </picture>
+        </h1>
+        <p>
+          This page was created by Gayle, Andriana and Abdulmajid as a group
+          project as part of our course at Code Your Future (CYF)
+        </p>
+      </section>
 
-      <h2 class="about-title">Our Aim</h2>
-      <p>
-        Our aim for this project was to tackle feeling associated with learning
-        and just life in general. We wanted to create affirmations for students
-        originally and people in general to either improve or enhance their mood
-        based on their feelings in the moment. Based on whatever mood you are
-        feeling, there will be quotes to uplift you and encourage you to be
-        positive and improve your mood.
-      </p>
+      <section class="info-section">
+        <h2 class="about-title">Our Aim</h2>
+        <p>
+          <!-- To capture students moods and offer appropriate uplifting or encouraging quotes -->
+          <!-- We want to motivate students by capturing their moods on any particular day and hopefully, offer them some type of encouragement and motivation in form of quotes, to keep on pushing in their studies.
+We will use colours (post research) that will be appropriate to the moods to help stir imagination and provoke thoughts.
+We will also add links to sites and resources that we have found helpful during our own study period too, if possible. -->
+
+          <!-- Our project is a web page that will produce affirmations that will be tailored to people's moods to help lighten their mood/ give them a sense of peace or source of strength.
+Our project will also use colours - like a colour therapy board - to enhance moods and help users better identify appropriate help sections.
+      like this example shown….. -->
+
+          Our aim for this project was to tackle feeling associated with
+          learning and just life in general. We wanted to create affirmations
+          for students originally and people in general to either improve or
+          enhance their mood based on their feelings in the moment. Based on
+          whatever mood you are feeling, there will be quotes to uplift you and
+          encourage you to be positive and improve your mood.
+        </p>
+      </section>
     </main>
 
     <footer>
