--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <section class="emotion-buttons">
         <button onclick="displayQuote3()" class="round-button" id="scared">
-          SCARED
+          <span class="emotion-word">SCARED</span>
           <br />
           <picture>
             <source
@@ -62,15 +62,16 @@
             <img
               src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f623/512.gif"
               alt="😣"
-              width="32"
-              height="32"
+              class="emoji"
+              width="34"
+              height="34"
             />
           </picture>
         </button>
         <p id="quote3"></p>
 
         <button onclick="displayQuote2()" class="round-button" id="uninspired">
-          UNINSPIRED
+          <span class="emotion-word">UNINSPIRED</span>
           <br />
           <picture>
             <source
@@ -82,15 +83,16 @@
             <img
               src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f62c/512.gif"
               alt="😬"
-              width="32"
-              height="32"
+              class="emoji"
+              width="34"
+              height="34"
             />
           </picture>
         </button>
         <p id="quote2"></p>
 
         <button onclick="displayQuote()" class="round-button" id="inspired">
-          INSPIRED
+          <span class="emotion-word">INSPIRED</span>
           <br />
           <picture>
             <source
@@ -102,15 +104,16 @@
             <img
               src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f929/512.gif"
               alt="🤩"
-              width="32"
-              height="32"
+              class="emoji"
+              width="34"
+              height="34"
             />
           </picture>
         </button>
         <p id="quote"></p>
 
         <button onclick="displayQuote5()" class="round-button" id="happy">
-          HAPPY
+          <span class="emotion-word">HAPPY</span>
           <br />
           <picture>
             <source
@@ -122,15 +125,16 @@
             <img
               src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f600/512.gif"
               alt="😀"
-              width="32"
-              height="32"
+              class="emoji"
+              width="34"
+              height="34"
             />
           </picture>
         </button>
         <p id="quote5"></p>
 
         <button onclick="displayQuote4()" class="round-button" id="sad">
-          SAD
+          <span class="emotion-word">SAD</span>
           <br />
           <picture>
             <source
@@ -142,8 +146,9 @@
             <img
               src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f61e/512.gif"
               alt="😞"
-              width="32"
-              height="32"
+              class="emoji"
+              width="34"
+              height="34"
             />
           </picture>
         </button>
