updated help page

--- a/help.html
+++ b/help.html
@@ -12,17 +12,24 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/help.css" />
-    <!-- <script src="https://kit.fontawesome.com/d81457d759.js" crossorigin="anonymous"></script> -->
+
+    <link rel="stylesheet"href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Help page</title>
  
       <div class="titlelogo">
         <span> <img src="/Affirmations-logo.png" alt="logo image"></span>
-        <br>
         <span class="title"><h5>SOULFUL TRUTHS</h5></span>
       </div>
-      <nav class="navbar">
-        <i class="fa-solid fa-bars"></i>
+
+      <nav>
+   
+
+    <a class="hamburger" href="#menu">
+      <span class="material-icons">menu</span>
+    </a>
+
       </nav>
     </header>
 
@@ -42,8 +49,8 @@
 
       <p>Need help with a coding project or have a question about programming...?
 
-        <div class="help-forum">
-      <button class="accordion"><h3><strong>CLICK HERE</strong></h3><p>to access some helpful resources.</p>
+        <div class="help-forums">
+      <button class="accordion"><h3><strong>CLICK HERE</strong></h3><p>to access some helpful online resources.</p>
         </button> 
       <div class="panel">
 
@@ -56,15 +63,16 @@
       </p>
       </div>
       </div>
+      <br>
 
-      <p style="font-style: italic;">[Remember: Always be respectful and follow rules and guidelines when posting or asking for help.]</p>
+      <p style="font-style: italic;">[Remember: Always be respectful and follow rules and guidelines when posting or asking for help.]</p> <br>
 
       <section class="tips">
-        <p>Click the buttons below to find some very helpful</p><h3>TIPS for FOCUS and STRESS RELIEF for Students..!</h3>
+        <p>Click the buttons below to find some very helpful<h4>FOCUS & STRESS RELIEF TIPS for Students..!</h4></p>
 
 
         <button class="accordion"><strong>FOCUS TIPS</strong></button>
-        <div class="panel"> </div>
+        <div class="panel"></div>
         <p>
          <ul>
           <li><strong>HAVE A DEDICATED WORK SPACE</strong> - Creating a designated workspace free from distractions will
@@ -116,20 +124,20 @@
 
       <aside class="contact-icon">
         <i class="fa
-        fa-envelope"style="font-size:28px"></i>
+        fa-envelope"style="font-size:24px"></i>
         <p>info@STaffirmations.com</p>
       </aside> <br>
 
       <section class="social">
         <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-instagram"></a>
         <a href="#" class="fa fa-twitter"></a>
         <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-instagram"></a>
         </section>
         <br>
     
       </p>
-      <p id="copyright">&copy;STaffirmations: Class9!</p>
+      <p id="copyright">&copy;STaffirmations-2022: Class9!</p>
     </footer>
 
 
