Updated header and footer to match on all pages

--- a/about.html
+++ b/about.html
@@ -85,6 +85,14 @@
         </p>
       </section>
 
+      <section class="image-area">
+        <img src="Soulful.png" alt="" class="image" />
+      </section>
+
+      <section class="image-area">
+        <img src="Soulful.png" alt="" class="image" id="image2" />
+      </section>
+
       <section class="info-section">
         <h2 class="about-title">Our Aim</h2>
         <p>
