--- a/help.html
+++ b/help.html
@@ -1,29 +1,50 @@
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="help.css" />
-      <title>Help page</title>
-    </head>
-    <body>
-      <header>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css" />
-    <script src="https://kit.fontawesome.com/d81457d759.js" crossorigin="anonymous"></script>
-    <title>Help page</title>
- 
-      <div class="titlelogo">
-        <span>Logo</span>
-        <br>
-        <span class="title">Soulful Truths</span>
-      </div>
-      <nav class="navbar">
-        <i class="fa-solid fa-bars"></i>
-      </nav>
-    </header>
+    <link rel="stylesheet" href="help.css" />
+    <script
+      src="https://kit.fontawesome.com/d81457d759.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat&family=Kalam&family=Kaushan+Script&family=Lobster+Two&family=Oleo+Script&family=Permanent+Marker&family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <title>Affirmation Page</title>
+  </head>
+
+
+    <body>
+       <header>
+        <nav class="navbar">
+          <aside class="titlelogo">
+            <span><img src="Soulful.png" alt="" /></span>
+            <h1 class="title">Soulful Truths</h1>
+          </aside>
+          <section class="nav-links">
+            <input id="check" type="checkbox" />
+            <label for="check" id="checkID">
+              <i class="fa-solid fa-bars"></i>
+            </label>
+            <ul class="nav-items">
+              <li>
+                <a href="index.html">HOME</a>
+              </li>
+              <li>
+                <a href="help.html">HELP PAGE</a>
+              </li>
+              <li>
+                <a href="about.html">ABOUT US</a>
+              </li>
+            </ul>
+          </section>
+        </nav>
+      </header>
 
     <main>
       <p>
@@ -100,31 +121,34 @@
     </main>
 
 
-    <footer class="footer">
+  <footer>
       <h2>Contact</h2>
 
-      <aside class="contact-icon">
-        <span><i class="fa-regular fa-envelope"></i>Mail</span>
-        <p>info@STaffirmations.com</p>
-      </aside>
+      <div class="footer-info">
+        <aside class="contact-icon">
+          <span><i class="fa-regular fa-envelope"></i>Email</span>
+          <p>info@affirmations.com</p>
+        </aside>
 
-      <section class="social">
-        <ul class="name-icon">
-          <li><i class="fa-brands fa-instagram"></i></li>
-          <li><a href="instagram.com">Instagram</a></li>
-        </ul>
-        <ul class="name-icon">
-          <li><i class="fa-brands fa-facebook-f"></i></li>
-          <li><a href="facebook.com">Facebook</a></li>
-        </ul>
-        <ul class="name-icon">
-          <li><i class="fa-brands fa-twitter"></i></li>
-          <li><a href="">Twitter</a></li>
-        </ul>
-      </section>
-      </p>
-      <p id="copyright">&copy;STAffirmations: Class9!</p>
+        <section class="social">
+          <ul class="name-icon">
+            <li><i class="fa-brands fa-instagram"></i></li>
+            <li><a href="instagram.com">Instagram</a></li>
+          </ul>
+          <ul class="name-icon">
+            <li><i class="fa-brands fa-facebook-f"></i></li>
+            <li><a href="facebook.com">Facebook</a></li>
+          </ul>
+          <ul class="name-icon">
+            <li><i class="fa-brands fa-twitter"></i></li>
+            <li><a href="">Twitter</a></li>
+          </ul>
+        </section>
+      </div>
+      <p id="copyright">&copy; STAffirmations, Inc.</p>
     </footer>
+  </body>
+</html>
   </body>
 
   </html>
