--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/CSS/styles.css" />
+    <link rel="stylesheet" href="../CSS/styles.css" />
     <script
       src="https://kit.fontawesome.com/d81457d759.js"
       crossorigin="anonymous"
@@ -22,7 +22,7 @@
     <header>
       <nav class="navbar">
         <aside class="titlelogo">
-          <span><img src="/IMAGE/Soulful.png" alt="" /></span>
+          <span><img src="../IMAGE/Soulful.png" alt="" /></span>
           <h1 class="title">Soulful Truths</h1>
         </aside>
         <section class="nav-links">
@@ -32,13 +32,13 @@
           </label>
           <ul class="nav-items">
             <li>
-              <a href="/HTML/index.html">HOME</a>
+              <a href="index.html">HOME</a>
             </li>
             <li>
-              <a href="/HTML/help.html">HELP PAGE</a>
+              <a href="help.html">HELP PAGE</a>
             </li>
             <li>
-              <a href="/HTML/about.html">ABOUT US</a>
+              <a href="about.html">ABOUT US</a>
             </li>
           </ul>
         </section>
