Focus and stress button
seem to be working ok with the accordion feature

--- a/HTML/help.html
+++ b/HTML/help.html
@@ -70,13 +70,13 @@
       <p><i>[Remember to always be respectful and follow the forum's rules and guidelines when posting or asking for help.]</i></p>
 
       <section class="tips">
-        <p>Click the buttons below to find some very helpful<h4>FOCUS & STRESS RELIEF TIPS for Students..!</h4></p>
+        <p>Click the buttons below to find some very helpful FOCUS & STRESS RELIEF TIPS FOR STUDENTS! </p>
 
 
-        <button onclick="myFunction()">
-          <h2>Focus Tips</h2>
-        </button>
-        <div id="tipsnideas">
+        <button class="accordion"><strong>FOCUS & STRESS RELIEF TIPS</strong></button>
+          
+        <div class="panel">
+          <p>
           <ul>
             <li><strong>HAVE A DEDICATED WORK SPACE</strong> - Creating a designated workspace free from distractions will
               help you maintain a higher level of concentration when you study. Avoid things and places that bring
