--- a/HTML/help.html
+++ b/HTML/help.html
@@ -47,14 +47,14 @@
       </header>
 
     <main>
-      <p>
-        Need help with a coding project or have a question about a programming language or concept?
+      <p><strong>
+        Need help with a coding project or have a question about a programming language or concept...?</strong>
       </p>
         
       <div class="help-forums">
       <button class="accordion">
           <h2>CLICK HERE</h2>
-        <p>to access Helpful Forums and online Programming Resources</p> </button>
+        <p>...to access Helpful Forums and online Programming Resources</p> </button>
       <div class="panel">
         <ul>
           <li><a href="https://stackoverflow.com/">Stack Overflow</a></li>
@@ -96,26 +96,19 @@
         </p>
         </div>
 
-        <button>
-          <div class="Stress-relief-tips">
-            <h2>Stress Relief Tips</h2>
+        <button class="accordion"><strong>STRESS RELIEF TIPS</strong></button>
+                <div class="panel">
+                  <p>
+                  <ul>
+         <li><strong>EXERCISE</strong> - regular exercises can help you release endorphins and in turn, reduce stress which can be a big impact on your studies.</li>
+           <li><strong>MEDITATION</strong>- Practice deep breathing, meditation or other form of relaxation techniques. These can help you to re-focus and re-align your mind towards your studies.</li>
+           <li><strong>NUTRITION</strong> - When the going gets tough, maintaining a good diet can become quite hard and eating a healthy and balanced diet can be moved to the bottom of the priority list. But eating right and well could be the key to improving your studies too.</li>
+           <li><strong>SLEEP</strong> - Sleeping is often underrated and hardly taled about as one of the main reasonsstudents get stressed. Get enough sleep every night, to recharge your body and mind. It will do wonders for your physical and mental health!</li>
+          <li><strong>TALK</strong> - Connect with others and talk about your feelings or any concerns you may have. You tutors and fellow trainees/students are there for you. Some might even be going through the same things...you just never know!
+        </li>
+           </ul>
+          </p>
           </div>
-        </button>
-        <ul>
-          <li><strong>EXERCISE</strong> - regular exercises can help you release endorphins and in turn, reduce stress
-            which can be a big impact on your studies.</li>
-          <li><strong>MEDITATION</strong>- Practice deep breathing, meditation or other form of relaxation techniques.
-            These can help you to re-focus and re-align your mind towards your studies.</li>
-          <li><strong>NUTRITION</strong> - When the going gets tough, maintaining a good diet can become quite hard and
-            eating a healthy and balanced diet can be moved to the bottom of the priority list. But eating right and well
-            could be the key to improving your studies too.</li>
-          <li><strong>SLEEP</strong> - Sleeping is often underrated and hardly taled about as one of the main reasons
-            students get stressed. Get enough sleep every night, to recharge your body and mind. It will do wonders for
-            your physical and mental health!</li>
-          <li><strong>TALK</strong> - Connect with others and talk about your feelings or any concerns you may have. You
-            tutors and fellow trainees/students are there for you. Some might even be going through the same things...you
-            just never know!</li>
-        </ul>
       </section>
     </main>
 
