updated button titles

--- a/HTML/help.html
+++ b/HTML/help.html
@@ -73,7 +73,7 @@
         <p>Click the buttons below to find some very helpful FOCUS & STRESS RELIEF TIPS FOR STUDENTS! </p>
 
 
-        <button class="accordion"><strong>FOCUS & STRESS RELIEF TIPS</strong></button>
+        <button class="accordion"><strong>FOCUS TIPS</strong></button>
           
         <div class="panel">
           <p>
@@ -96,7 +96,7 @@
         </p>
         </div>
 
-        <button class="accordion"><strong>STRESS RELIEF TIPS</strong></button>
+        <button class="accordion"><strong>STRESS-RELIEF TIPS</strong></button>
                 <div class="panel">
                   <p>
                   <ul>
